maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:9: error: '=' expected but ',' found.
def trouveBiscuit():Int,Int = {
                       ^ShortestPathMaze:22: error: illegal start of simple expression
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
^