maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var largeur = getMondeLargeur()
  var hauteur = getMondeHauteur()
  var compteur = 0
  var (i,j) = trouveBiscuit()
}

def trouveBiscuit():Int,Int = {
  var largeur = getMondeLargeur()
  var hauteur = getMondeHauteur()
  for (i <- 0 to largeur-1; j <- 0 to hauteur-1) {
  	if (aBiscuit(i,j)) {
    	setIndication(i,j,0)
    	return(i,j)
    }
  }
}